--- a/.github/workflows/basic.yml
+++ b/.github/workflows/basic.yml
@@ -1,7 +1,8 @@
 
 name: CI
 
-push:
-  branches: [ main ]
-pull request:
-  branches: [ main ]
+on:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
